--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 body {
     background: #beed47;
     font-family: 'Denk One';
+    overflow: hidden;
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
@@ -10,7 +11,7 @@ body {
     clear: both;
 }
 
-#wrapper {
+.wrapper {
     bottom: 35%;
     left: 18%;
     position: absolute;
@@ -19,7 +20,8 @@ body {
     top: 35%;
 }
 
-#wrapper > div {
+#category,
+#game {
     border-radius: 6px;
     box-shadow: 0 0 6px 2px #93b837;
     height: 40%;
@@ -154,4 +156,16 @@ body {
 
 #options div {
     margin-bottom: 16px;
+}
+
+#start {
+    background: #000;
+    border: 2px solid #fff;
+    border-radius: 16px;
+    box-shadow: 0 0 6px 2px #93b837;
+    color: #fff;
+    display: block;
+    height: 100%;
+    outline: none;
+    text-decoration: none;
 }
