fix bug in games selection

--- a/css/games.css
+++ b/css/games.css
@@ -55,6 +55,7 @@
     height: 32px;
     left: -144px;
     line-height: 32px;
+    outline: none;
     position: absolute;
     text-align: center;
     text-decoration: none;
