move wo_liegt_was time display to audience screen

--- a/games/wo_liegt_was/css/wo_liegt_was.css
+++ b/games/wo_liegt_was/css/wo_liegt_was.css
@@ -35,8 +35,11 @@
 }
 
 #time {
-    height: 10%;
+    bottom: 0;
+    font-size: 52px;
     margin-top: 3%;
+    position: absolute;
+    width: 100%;
 }
 
 .player {
