--- a/css/games.css
+++ b/css/games.css
@@ -1,7 +1,7 @@
 #category,
 #game {
     border-radius: 6px;
-    box-shadow: 0 0 6px 2px #93b837;
+    box-shadow: 0 0 5px rgba(0,0,0,0.5), 3px 3px 5px rgba(0,0,0,0.2) inset;
     height: 40%;
     overflow: hidden;
     position: absolute;
@@ -9,8 +9,8 @@
 }
 
 #category {
-    border: 2px solid #fff;
-    color: #fff;
+    border: 6px solid #ebebeb;
+    color: #ebebeb;
     cursor: pointer;
     text-overflow: ellipsis;
     top: 0;
@@ -18,8 +18,8 @@
 }
 
 #game {
-    background: #fff;
-    border: 2px solid #93b837;
+    background: #ebebeb;
+    border: 6px solid #ebebeb;
     bottom: 0;
 }
 
@@ -45,15 +45,15 @@
 }
 
 #manual > a {
-    border: 2px solid white;
+    border: 6px solid #ebebeb;
     border-top-left-radius: 18px;
     border-bottom-left-radius: 18px;
-    box-shadow: 0 0 6px 0px #93B837;
+    box-shadow: 0 0 5px rgba(0,0,0,0.5);
     color: white;
     font-size: 21px;
     font-weight: bold;
     height: 32px;
-    left: -144px;
+    left: -152px;
     line-height: 32px;
     outline: none;
     position: absolute;
@@ -77,7 +77,7 @@
     height: 100%;
     overflow-y: auto;
     padding-right: 8px;
-    text-shadow: 1px 1px 0 #647732;
+    text-shadow: 0 0 2px rgba(0,0,0,0.2);
 }
 
 #manual .content > div {
