--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Denk+One);
 
 body {
-    background: #beed47;
+    background: url('../img/bg.png');
     font-family: 'Denk One';
     overflow: hidden;
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
@@ -21,15 +21,15 @@ body {
 }
 
 .container {
-    background: #86aa2a;
+    background: rgba(255,255,255,0.2);
     bottom: 2%;
-    border: 2px solid #fff;
+    border: 6px solid #ebebeb;
     border-radius: 6px;
-    box-shadow: 0 0 6px 2px #93b837;
+    box-shadow: 0 0 6px 2px rgba(0,0,0,0.5);
     font-family: Helvetica, sans-serif;
     font-size: 14px;
     left: 2%;
-    padding: 8px 0 8px 8px;
+    padding-left: 8px;
     position: absolute;
     right: 2%;
     text-align: justify;
@@ -41,24 +41,27 @@ body {
     font-size: 24px;
     font-weight: bold;
     text-align: center;
-    margin: 0 0 24px 0;
+    margin: 12px 0 24px 0;
 }
 
 .button {
-    background: #000;
-    border: 2px solid #fff;
+    background: rgba(0,0,0,0.5);
+    border: 6px solid #ebebeb;
     border-radius: 16px;
-    box-shadow: 0 0 6px 2px #93b837;
-    color: #fff;
+    box-shadow: 0 0 5px rgba(0,0,0,0.5);
+    color: #ebebeb;
     display: block;
-    height: 100%;
+    font-size: 52px;
+    height: 64px;
     outline: none;
     text-decoration: none;
     text-shadow: none;
 }
 
 .button.disabled {
-    border-color: #444;
-    color: #444;
+    background: rgba(0,0,0,0.6);
+    border-color: #313338;
+    color: #313338;
     cursor: default;
+    box-shadow: 0 0 5px rgba(0,0,0,0.3);
 }
