--- a/js/plugins/scoreboard/jquery.scoreboard.css
+++ b/js/plugins/scoreboard/jquery.scoreboard.css
@@ -66,7 +66,7 @@
 .counts ul li {
     display: block;
     padding: 5px;
-    background: #333;
+    background: url('img/cellbg.png');
     border-radius: 2px;
     margin-right: 5px;
     box-shadow: 3px 3px 5px rgba(0,0,0,0.2) inset;
