--- a/js/plugins/moderator/jquery.moderator.css
+++ b/js/plugins/moderator/jquery.moderator.css
@@ -3,8 +3,15 @@
     border: 6px solid #8a8f97;
     border-radius: 16px;
     box-shadow: 0 0 5px rgba(0,0,0,0.5), 3px 3px 5px rgba(0,0,0,0.2) inset;
+    display: table;
     height: 25%;
     padding: 6px;
+    width: 100%;
+}
+
+#question div {
+    display: table-cell;
+    vertical-align: middle;
 }
 
 #info {
@@ -22,7 +29,8 @@
 }
 
 .player {
-    background: rgba(0,0,0,0.3);
+    background: linear-gradient(to bottom, #ffcc66 0%, #ff9933 100%);
+    background: -webkit-linear-gradient(#ffcc66 0%, #ff9933 100%);
     border: 6px solid #4e535c;
     border-radius: 16px;
     bottom: 0;
@@ -33,17 +41,51 @@
     width: 30%;
 }
 
-.player div {
-    color: #000;
-    display: none;
-}
-
 .player.blue {
-    color: #09f;
     left: 0;
 }
 
 .player.red {
+    right: 0;
+}
+
+.player .name {
+    height: 50%;
+}
+
+.player.blue .name {
+    color: #09f;
+    left: 0;
+}
+
+.player.red .name {
     color: #f00;
     right: 0;
+}
+
+.player .status {
+    background: url(img/cellbg.png);
+    border: 6px solid #4e535c;
+    border-radius: 46px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.8);
+    height: 68px;
+    padding: 6px;
+    margin: 0 auto;
+    width: 68px;
+}
+
+.player .status.ready span {
+    background: linear-gradient(to bottom, #70b31b 0%, #4b7513 100%);
+    background: -webkit-linear-gradient(#70b31b 0%, #4b7513 100%);
+    border-color: #8ee420 #4f7e12 #4b7513 #629c18;
+    border-radius: 34px;
+    border-style: solid;
+    border-width: 2px 4px 6px;
+    display: block;
+    height: 60px;
+    width: 60px;
+}
+
+.player .status.winner {
+    box-shadow: 0 0 10px 2px rgba(0,0,0,0.5), 0 0 50px 30px #70b31b;
 }
