--- a/css/main.css
+++ b/css/main.css
@@ -66,3 +66,11 @@ body {
     cursor: default;
     box-shadow: 0 0 5px rgba(0,0,0,0.3);
 }
+
+#start {
+    height: 40%;
+    left: 15%;
+    position: absolute;
+    right: 15%;
+    top: 30%;
+}
