--- a/games/wo_liegt_was/css/wo_liegt_was.css
+++ b/games/wo_liegt_was/css/wo_liegt_was.css
@@ -34,7 +34,7 @@
 .info {
     background: #fff;
     border-radius: 12px;
-    box-shadow: 0 0 6px 0px #000;
+    box-shadow: 0 0 6px 0 #000;
     display: none;
     font-size: 42px;
     height: 80px;
